--- a/psycopg.ipynb
+++ b/psycopg.ipynb
@@ -3593,7 +3593,7 @@
     "db_params = {\n",
     "    \"dbname\": \"yt_deddy\",\n",
     "    \"user\": \"postgres\",\n",
-    "    \"password\": \"@apok@123\",\n",
+    "    \"password\": \"<password>3\",\n",
     "    \"host\": \"localhost\",\n",
     "    \"port\": \"5432\"\n",
     "}"
